# real-world-axum-sqlx

./: .gitignore  Cargo.toml  demo.env  log4rs.yaml
migration/: article.sql  user_follow.sql  users.sql
src/: app_state.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  validate.rs
src/article/: handler.rs  mod.rs  route.rs
src/article/application/: article_favorite_repository.rs  article_repository.rs  article_tag_repository.rs  create_article_usecase.rs  get_articles_default_usecase.rs  get_feed_article_usecase.rs  get_single_article_usecase.rs  mod.rs  tag_repository.rs  update_article_usecase.rs
src/article/domain/: article.rs  mod.rs  tag.rs
src/auth/: auth.rs  auth_tests.rs  clock.rs  hash_password.rs  jwt_decoder.rs  jwt_encoder.rs  jwt_payload.rs  mod.rs
src/config/: app_state.rs  db.rs  di_factory.rs  error.rs  mod.rs  validate.rs
src/profile/: mod.rs
src/profile/api/: handler.rs  model.rs
src/profile/domain/: mod.rs  model.rs  repository.rs  service.rs
src/profile/repository/: model.rs  repository.rs
src/profile/service/: service.rs
src/user/: handler.rs  mod.rs  route.rs  user_handler.rs
src/user/application/: follow_handler.rs  follow_repository.rs  follow_usecase.rs  get_current_user_usecase.rs  get_profile_usecase.rs  handler.rs  login_usecase.rs  mod.rs  registration_usecase.rs  repository.rs  update_user_usecase.rs  user_handler.rs  user_repository.rs
src/user/domain/: hash_password.rs  mod.rs  model.rs  repository.rs  service.rs  user.rs
src/user/repository/: repository.rs
src/user/service/: model.rs  service.rs
tests/: article_integration.rs  follow_integration.rs
tests/common/: mod.rs
