[package]
name = "real-world-axum-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-async-std", "macros", "mysql", "time"] }

# 암호
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"

# 시간
chrono = "0.4.37"

# env
dotenv = "0.15.0"

# error
anyhow = "1.0.81"
thiserror = "1.0.58"

# 유틸
log = "0.4.21"
validator = { version = "0.18.1", features = ["derive"] }