[package]
name = "real-world-axum-sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", default-features = false, features = ["runtime-async-std", "macros", "postgres", "chrono"] }

# 암호
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"

# 시간
chrono = { version = "0.4.38", features = ["serde"] }

# env
dotenv = "0.15.0"

# error
anyhow = "1.0.86"
thiserror = "1.0.63"

# 유틸
log = "0.4.21"
log4rs = "1.3.0"

validator = "0.18.1"
validator_derive = "0.18.1"
bytes = "1.7.1"

[dev-dependencies]
serde_json = "1.0.116"
